Added Serialization.* files

--- a/libraries/utilities/CMakeLists.txt
+++ b/libraries/utilities/CMakeLists.txt
@@ -23,6 +23,7 @@ set (SRC src/CompressedIntegerList.cpp
          src/ObjectDescription.cpp
          src/OutputStreamImpostor.cpp
          src/RandomEngines.cpp
+         src/Serialization.cpp
          src/TypeName.cpp
          src/UniqueId.cpp
          src/Variant.cpp
@@ -42,6 +43,7 @@ set (INCLUDE include/CompressedIntegerList.h
              include/ParallelTransformIterator.h
              include/Parser.h
              include/RandomEngines.h
+             include/Serialization.h
              include/StlIndexValueIterator.h
              include/StlIterator.h
              include/TransformIterator.h
@@ -62,6 +64,7 @@ set (TCC tcc/AnyIterator.tcc
          tcc/ObjectDescription.tcc
          tcc/ParallelTransformIterator.tcc
          tcc/Parser.tcc
+         tcc/Serialization.tcc
          tcc/StlIndexValueIterator.tcc
          tcc/StlIterator.tcc
          tcc/TransformIterator.tcc
