--- a/libraries/utilities/CMakeLists.txt
+++ b/libraries/utilities/CMakeLists.txt
@@ -24,6 +24,8 @@ set (SRC src/CompressedIntegerList.cpp
          src/OutputStreamImpostor.cpp
          src/RandomEngines.cpp
          src/Serialization.cpp
+         src/SimpleJsonSerializer.cpp
+         src/XMLSerializer.cpp
          src/TypeName.cpp
          src/UniqueId.cpp
          src/Variant.cpp
@@ -44,6 +46,8 @@ set (INCLUDE include/CompressedIntegerList.h
              include/Parser.h
              include/RandomEngines.h
              include/Serialization.h
+             include/SimpleJsonSerializer.h
+             include/XMLSerializer.h
              include/StlIndexValueIterator.h
              include/StlIterator.h
              include/TransformIterator.h
@@ -65,6 +69,8 @@ set (TCC tcc/AnyIterator.tcc
          tcc/ParallelTransformIterator.tcc
          tcc/Parser.tcc
          tcc/Serialization.tcc
+         tcc/SimpleJsonSerializer.tcc
+         tcc/XMLSerializer.tcc
          tcc/StlIndexValueIterator.tcc
          tcc/StlIterator.tcc
          tcc/TransformIterator.tcc
