Added context arg to deserialize.

--- a/libraries/utilities/CMakeLists.txt
+++ b/libraries/utilities/CMakeLists.txt
@@ -19,6 +19,7 @@ set (SRC src/CompressedIntegerList.cpp
          src/Format.cpp
          src/IntegerList.cpp
          src/IntegerStack.cpp
+         src/IDescribable.cpp
          src/ISerializable.cpp
          src/ObjectDescription.cpp
          src/OutputStreamImpostor.cpp
@@ -40,6 +41,7 @@ set (INCLUDE include/CompressedIntegerList.h
              include/IIterator.h
              include/IntegerList.h
              include/IntegerStack.h
+             include/IDescribable.h
              include/ISerializable.h
              include/ObjectDescription.h
              include/OutputStreamImpostor.h
@@ -66,6 +68,7 @@ set (TCC tcc/AnyIterator.tcc
          tcc/CommandLineParser.tcc
          tcc/Exception.tcc
          tcc/Format.tcc
+         tcc/IDescribable.tcc
          tcc/ISerializable.tcc
          tcc/ObjectDescription.tcc
          tcc/ParallelTransformIterator.tcc
