1. Bind to LLVM intrinsics 2. Compile UnaryNodes - square roots

--- a/libraries/compiler/CMakeLists.txt
+++ b/libraries/compiler/CMakeLists.txt
@@ -54,6 +54,7 @@ set (TCC tcc/SymbolTable.tcc
 		 tcc/IREmitter.tcc
 		 tcc/IRModuleEmitter.tcc
 		 tcc/IRFunctionEmitter.tcc
+		 tcc/IRRuntime.tcc
 		 tcc/IRCompiler.tcc
 )
 
