CppCompiler - output nodes

--- a/libraries/compiler/CMakeLists.txt
+++ b/libraries/compiler/CMakeLists.txt
@@ -64,6 +64,7 @@ set (TCC tcc/SymbolTable.tcc
 		 tcc/IRModuleEmitter.tcc
 		 tcc/IRFunctionEmitter.tcc
 		 tcc/IRRuntime.tcc
+		 tcc/Compiler.tcc
 		 tcc/IRCompiler.tcc
 		 tcc/CppEmitter.tcc
 		 tcc/CppModuleEmitter.tcc
