--- a/libraries/nodes/CMakeLists.txt
+++ b/libraries/nodes/CMakeLists.txt
@@ -72,7 +72,7 @@ source_group("include" FILES ${TEST_INCLUDE})
 
 add_executable(${TEST_NAME} ${TEST_SRC} ${TEST_INCLUDE} ${INCLUDE})
 target_include_directories(${TEST_NAME} PRIVATE test/include)
-target_link_libraries(${TEST_NAME} testing linear model nodes predictors utilities)
+target_link_libraries(${TEST_NAME} testing linear model nodes predictors utilities common)
 
 set_property(TARGET ${TEST_NAME} PROPERTY FOLDER "tests")
 
