Removed old tree/ensemble predictors, trainers, tools

--- a/libraries/predictors/CMakeLists.txt
+++ b/libraries/predictors/CMakeLists.txt
@@ -13,19 +13,15 @@ if(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID 
 endif()
 
 set (SRC src/ConstantPredictor.cpp
-         src/DecisionTreePredictor.cpp
          src/LinearPredictor.cpp
          src/SingleElementThresholdPredictor.cpp)
 
 set (INCLUDE include/ConstantPredictor.h
-             include/DecisionTreePredictor.h
-             include/EnsemblePredictor.h
              include/LinearPredictor.h
              include/SingleElementThresholdPredictor.h
              include/ForestPredictor.h)
 
-set (TCC tcc/EnsemblePredictor.tcc
-         tcc/SingleElementThresholdPredictor.tcc
+set (TCC tcc/SingleElementThresholdPredictor.tcc
          tcc/ForestPredictor.tcc)
 
 source_group("src" FILES ${SRC})
