--- a/libraries/common/CMakeLists.txt
+++ b/libraries/common/CMakeLists.txt
@@ -12,8 +12,7 @@ if(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID 
   add_compile_options(-std=c++1y)
 endif()
 
-set (SRC src/BaggingIncrementalTrainerArguments.cpp
-         src/DataLoadArguments.cpp
+set (SRC src/DataLoadArguments.cpp
          src/DataSaveArguments.cpp
          src/DataLoaders.cpp
          src/EvaluatorArguments.cpp
@@ -30,8 +29,7 @@ set (SRC src/BaggingIncrementalTrainerArguments.cpp
          src/TrainerArguments.cpp
 )
 
-set (INCLUDE include/BaggingIncrementalTrainerArguments.h
-             include/DataLoadArguments.h
+set (INCLUDE include/DataLoadArguments.h
              include/DataSaveArguments.h
              include/DataLoaders.h
              include/EvaluatorArguments.h
