fixed support for either int or bool split rules changes singleElementThreshold to output bool

--- a/libraries/predictors/CMakeLists.txt
+++ b/libraries/predictors/CMakeLists.txt
@@ -17,6 +17,7 @@ set (SRC src/ConstantPredictor.cpp
          src/SingleElementThresholdPredictor.cpp)
 
 set (INCLUDE include/ConstantPredictor.h
+             include/IPredictor.h
              include/LinearPredictor.h
              include/SingleElementThresholdPredictor.h
              include/ForestPredictor.h)
