CppCompiler - Forest bug fix

--- a/prototype/llvmTest/llvmTest/llvmTest.vcxproj
+++ b/prototype/llvmTest/llvmTest/llvmTest.vcxproj
@@ -162,6 +162,7 @@
     <ClInclude Include="ModuleEmitter.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="Tests.h" />
     <ClInclude Include="ValueType.h" />
   </ItemGroup>
   <ItemGroup>
@@ -175,6 +176,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="TestForest.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
