--- a/prototype/llvmTest/llvmTest/llvmTest.vcxproj.filters
+++ b/prototype/llvmTest/llvmTest/llvmTest.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="EmitterException.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Tests.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -63,6 +66,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="LLVMEmitter.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="TestForest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
