Removed layers from SWIG interfaces

--- a/interfaces/CMakeLists.txt
+++ b/interfaces/CMakeLists.txt
@@ -4,15 +4,9 @@
 include (CommonInterfaces)
 
 set (INTERFACE_SRC ../common/src/DataLoadersInterface.cpp
-                   ../common/src/LoadModelInterface.cpp
-                   ../common/src/MapInterface.cpp
-                   ../common/src/ModelInterface.cpp
                    ../common/src/RowDatasetInterface.cpp)
 
 set (INTERFACE_INCLUDE ../common/include/DataLoadersInterface.h
-                       ../common/include/LoadModelInterface.h
-                       ../common/include/MapInterface.h
-                       ../common/include/ModelInterface.h
                        ../common/include/RowDatasetInterface.h
                        ../common/include/SGDIncrementalTrainer_wrap.h)
 
@@ -24,8 +18,6 @@ set (INTERFACE_FILES ../common/common.i
 					 ../common/loadDatasetAsync.i
                      ../common/dataset.i
                      ../common/evaluators.i
-                     ../common/features.i
-                     ../common/layers.i
                      ../common/linear.i
                      ../common/lossFunctions.i
                      ../common/model.i
@@ -36,14 +28,12 @@ set (INTERFACE_FILES ../common/common.i
                      ../common/unique_ptr.i
                      ../common/utilities.i)
 
-set (INTERFACE_DEPENDENCIES common dataset evaluators features layers linear lossFunctions trainers predictors testing treeLayout utilities)
+set (INTERFACE_DEPENDENCIES common dataset evaluators linear lossFunctions trainers predictors testing treeLayout utilities)
 
 # Add EMLL library include directories
 include_directories(../libraries/common/include)
 include_directories(../libraries/dataset/include)
 include_directories(../libraries/evaluators/include)
-include_directories(../libraries/features/include)
-include_directories(../libraries/layers/include)
 include_directories(../libraries/linear/include)
 include_directories(../libraries/lossFunctions/include)
 include_directories(../libraries/model/include)
