--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -7,14 +7,9 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.8.11)
 set (PROJ_NAME scripts)
 PROJECT(${PROJ_NAME})
 
-set (SRC recipeUtil.py train_sgd.py)
+set (SRC recipeUtil.py)
 
 add_custom_target(${PROJ_NAME} ALL DEPENDS ${SRC} SOURCES ${SRC})
-
-# tests
-add_test(NAME sgd_train
-         WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR} 
-         COMMAND python train_sgd.py ../../examples/data/testData.txt test_sgd.model test_sgd.html test_sgd_code.txt)
 
 # copy contents of scripts directory to build/scripts
 foreach(SCRIPT_FILE ${SRC})
