Removed layers from CMake build

--- a/libraries/predictors/CMakeLists.txt
+++ b/libraries/predictors/CMakeLists.txt
@@ -35,7 +35,7 @@ target_include_directories(${PROJ_NAME} PUBLIC include)
 if(CMAKE_COMPILER_IS_GNUCXX)
   target_compile_options(${PROJ_NAME} PRIVATE -fPIC)
 endif()
-target_link_libraries(${PROJ_NAME} dataset layers utilities)
+target_link_libraries(${PROJ_NAME} dataset utilities)
 
 set_property(TARGET ${PROJ_NAME} PROPERTY FOLDER "libraries")
 
