Changed implementation of IsNodeCompilable to use GetTypeName()

--- a/libraries/common/CMakeLists.txt
+++ b/libraries/common/CMakeLists.txt
@@ -50,7 +50,8 @@ set (INCLUDE include/BaggingIncrementalTrainerArguments.h
              include/TrainerArguments.h
 )
 
-set (TCC tcc/MakeEvaluator.tcc
+set (TCC tcc/IsNodeCompilable.tcc
+         tcc/MakeEvaluator.tcc
          tcc/ParametersEnumerator.tcc
 )
 
